--- a/style.css
+++ b/style.css
@@ -14,6 +14,7 @@ form {
 
 legend {
     font-weight: bold;
+    font-size: 1.2em;
     padding: 10px;
     margin-left: 10px;
 }
@@ -22,17 +23,20 @@ legend {
     width: 500px;
 }
 
-label, input {    
+#cEst, label, input {    
     margin: 5px 0px;
     padding: 5px;
+    border-radius: 5px;
+    border-color: rgba(0, 0, 0, 0.174);
+    border-width: 0.1px;
 }
 
-#cEst {
-    padding: 5px;
+button {
+    bu
 }
-
-
 
 fieldset {
-    background-color: rgb(245, 250, 250);
+    background-color: rgb(248, 252, 252);
+    border-color: rgba(0, 0, 0, 0.264);
+    border-radius: 10px;    
 }
