--- a/style.css
+++ b/style.css
@@ -7,10 +7,22 @@
     font-family: 'Open Sans', sans-serif;
     
 }
+body {
+    display: flex;
+    flex-direction: column;
+    min-height: 100vh;
+}
+
+.container {
+    flex: 1;
+    margin: auto;
+    margin-top: 100px;
+}
 
 form {
+    flex: 1;
+    margin: 30px auto;
     max-width: 700px;
-    margin: 0 auto;
     font-size: 14px;
 }
 
@@ -46,4 +58,21 @@ fieldset {
     background-color: rgb(248, 252, 252);
     border-color: rgba(0, 0, 0, 0.264);
     border-radius: 10px;    
+}
+footer {
+    font-family: var(--fonte1);
+    background-color: rgb(0, 0, 0);
+    color: rgb(218, 214, 214);
+    padding: 10px 0 10px 0;
+    font-size: small;
+    text-align: center;
+}
+
+footer a {
+    color: white;
+    text-decoration: none;    
+
+}
+footer a:hover {
+    text-decoration: underline; 
 }
